--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="language" content="English" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- webpackIgnore: true -->
     <link rel="shortcut icon" href="favicon.ico"/>
 
     <title>Error 404</title>
